# internal/presentation/http/handler/auth_handler.go
@@ -2,8 +2,9 @@ package handler
 
 import (
 	"login_module/internal/application/service"
+	"net/http"
 
-	"github.com/gofiber/fiber/v2"
+	"github.com/gin-gonic/gin"
 )
 
 type AuthHandler struct {
@@ -14,72 +15,81 @@ func NewAuthHandler(authService *service.AuthService) *AuthHandler {
 	return &AuthHandler{authService: authService}
 }
 
-// Login handles the login request
+// Login godoc
 // @Summary Login
 // @Description Handles user login
 // @Tags auth
 // @Accept json
 // @Produce json
-// @Param username body string true "Username"
-// @Param password body string true "Password"
-// @Failure 400 {object} string"
-// @Failure 404 {object} string"
-// @Success 200 {object} string
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Failure 401 {object} map[string]string
 // @Router /auth/login [post]
-func (h *AuthHandler) Login(c *fiber.Ctx) error {
-	username := c.FormValue("username")
-	password := c.FormValue("password")
-
-	accessToken, refreshToken, err := h.authService.Login(username, password)
-	if err != nil {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "invalid credentials"})
+func (h *AuthHandler) Login(c *gin.Context) {
+	var credentials struct {
+		Username string `json:"username"`
+		Password string `json:"password"`
 	}
 
-	c.Cookie(&fiber.Cookie{
-		Name:     "refreshToken",
-		Value:    refreshToken,
-		HTTPOnly: true,
-	})
+	if err := c.ShouldBindJSON(&credentials); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		return
+	}
 
-	return c.JSON(fiber.Map{"accessToken": accessToken})
+	accessToken, refreshToken, err := h.authService.Login(credentials.Username, credentials.Password)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid credentials"})
+		return
+	}
+
+	c.SetCookie("refreshToken", refreshToken, 3600*24, "/", "", false, true)
+	c.JSON(http.StatusOK, gin.H{"accessToken": accessToken})
 }
 
 // RefreshToken godoc
-// @Summary      Refreshes the access token
-// @Description  Refresh the access token using the refresh token
-// @Tags         auth
-// @Produce      json
-// @Success      200  {object}  map[string]string
-// @Failure      401  {object}  map[string]string
-// @Router       /auth/refresh_token [post]
-
-func (h *AuthHandler) RefreshToken(c *fiber.Ctx) error {
-	refreshToken := c.Cookies("refreshToken")
+// @Summary Refreshes the access token
+// @Description Refresh the access token using the refresh token
+// @Tags auth
+// @Produce json
+// @Success 200 {object} map[string]string
+// @Failure 401 {object} map[string]string
+// @Router /auth/refresh_token [post]
+func (h *AuthHandler) RefreshToken(c *gin.Context) {
+	refreshToken, err := c.Cookie("refreshToken")
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid or expired refresh token"})
+		return
+	}
 
 	newAccessToken, err := h.authService.RefreshToken(refreshToken)
 	if err != nil {
-		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "invalid or expired refresh token"})
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid or expired refresh token"})
+		return
 	}
 
-	return c.JSON(fiber.Map{"accessToken": newAccessToken})
+	c.JSON(http.StatusOK, gin.H{"accessToken": newAccessToken})
 }
 
 // Logout godoc
-// @Summary      Logs out a user
-// @Description  Logs out the user by deleting the refresh token
-// @Tags         auth
-// @Produce      json
-// @Success      200
-// @Failure      500  {object}  map[string]string
-// @Router       /auth/logout [post]
-func (h *AuthHandler) Logout(c *fiber.Ctx) error {
-	refreshToken := c.Cookies("refreshToken")
-
-	if err := h.authService.Logout(refreshToken); err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": "failed to logout"})
+// @Summary Logs out a user
+// @Description Logs out the user by deleting the refresh token
+// @Tags auth
+// @Produce json
+// @Success 200
+// @Failure 500 {object} map[string]string
+// @Router /auth/logout [post]
+func (h *AuthHandler) Logout(c *gin.Context) {
+	refreshToken, err := c.Cookie("refreshToken")
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to logout"})
+		return
 	}
 
-	c.ClearCookie("refreshToken")
+	if err := h.authService.Logout(refreshToken); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to logout"})
+		return
+	}
 
-	return c.SendStatus(fiber.StatusOK)
+	c.SetCookie("refreshToken", "", -1, "/", "", false, true)
+	c.Status(http.StatusOK)
 }
